python/cffi/cdef/cdef_air.h

                                        easy numerical comparison */
typedef unsigned long long airULLong;
typedef struct {
  const char *name;
  unsigned int M;
  const char **str; 
  const int *val;   
  const char **desc;
  const char **strEqv;
  const int *valEqv;
  int sense; 
} airEnum;
typedef struct {
  void *data,               
    **dataP;                
  unsigned int len,         
    *lenP,                  
    incr,                   
    size;                   
  size_t unit;              
  int noReallocWhenSmaller; 
  void *(*allocCB)(void);  
  void *(*freeCB)(void *); 
  void (*initCB)(void *);  
  void (*doneCB)(void *);  
} airArray;
typedef struct _airThreadMutex airThreadMutex;
typedef struct _airThreadCond airThreadCond;
typedef struct {
  unsigned int numUsers, numDone;
  airThreadMutex *doneMutex;
  airThreadCond *doneCond;
} airThreadBarrier;
typedef struct {
  unsigned int state[AIR_RANDMT_N], 
    *pNext,                         
    left;                           
} airRandMTState;
extern unsigned int airParseStrF(float *out, const char *s, const char *ct,
                                     unsigned int n, ... );
extern unsigned int airParseStrD(double *out, const char *s, const char *ct,
                                     unsigned int n, ... );
extern unsigned int airParseStrC(char *out, const char *s, const char *ct,
                                     unsigned int n, ... );
extern unsigned int airParseStrS(char **out, const char *s, const char *ct,
                                     unsigned int n,
                                     ... );
extern unsigned int airParseStrE(int *out, const char *s, const char *ct,
                                     unsigned int n, ... );
extern char *airStrdup(const char *s);
extern size_t airStrlen(const char *s);
extern int airStrtokQuoting;
extern char *airStrtok(char *s, const char *ct, char **last);
extern unsigned int airStrntok(const char *s, const char *ct);
extern char *airStrtrans(char *s, char from, char to);
extern int airEndsWith(const char *s, const char *suff);
extern char *airUnescape(char *s);
extern char *airOneLinify(char *s);
extern char *airToLower(char *str);
extern char *airToUpper(char *str);
extern unsigned int airOneLine(FILE *file, char *line, unsigned int size);
extern const char *airInsaneErr(int insane);
extern int airSanity(void);
extern const char *const airTeemVersion;
extern const char *const airTeemReleaseDate;
extern void *airNull(void);
extern void *airSetNull(void **ptrP);
extern void *airFree(void *ptr);
extern FILE *airFopen(const char *name, FILE *std, const char *mode);
extern FILE *airFclose(FILE *file);
extern int airSinglePrintf(FILE *file, char *str, const char *fmt, ...);
extern unsigned int airIndex(double min, double val, double max, unsigned int N);
extern unsigned int airIndexClamp(double min, double val, double max,
                                      unsigned int N);
extern airULLong airIndexULL(double min, double val, double max, airULLong N);
extern airULLong airIndexClampULL(double min, double val, double max, airULLong N);
extern char *airDoneStr(double start, double here, double end, char *str);
extern double airTime(void);
extern const char airTypeStr[AIR_TYPE_MAX + 1][AIR_STRLEN_SMALL];
extern const size_t airTypeSize[AIR_TYPE_MAX + 1];
extern void airEqvAdd(airArray *eqvArr, unsigned int j, unsigned int k);
extern unsigned int airEqvMap(airArray *eqvArr, unsigned int *map, unsigned int len);
extern unsigned int airEqvSettle(unsigned int *map, unsigned int len);
extern double airFastExp(double val);
extern void airNormalRand(double *z1, double *z2);
extern void airNormalRand_r(double *z1, double *z2, airRandMTState *state);
extern void airShuffle(unsigned int *buff, unsigned int N, int perm);
extern void airShuffle_r(airRandMTState *state, unsigned int *buff, unsigned int N,
                             int perm);
extern double airCbrt(double);
extern double airMode3(double a, double b, double c);
extern double airMode3_d(const double v[3]);
extern double airSgnPow(double, double);
extern double airIntPow(double v, int p);
extern int airLog2(size_t n);
extern int airSgn(double);
extern double airErfc(double x);
extern double airErf(double x);
extern double airGaussian(double x, double mean, double stdv);
extern double airBesselI0(double x);
extern double airBesselI1(double x);
extern double airBesselI0ExpScaled(double x);
extern double airBesselI1ExpScaled(double x);
extern double airLogBesselI0(double x);
extern double airLogRician(double mes, double tru, double sig);
extern double airRician(double mes, double tru, double sig);
extern double airBesselI1By0(double x);
extern double airBesselIn(int n, double x);
extern double airBesselInExpScaled(int n, double x);
extern const char *airNoDioErr(int noDio);
extern const int airMyDio;
extern int airDisableDio;
extern void airDioInfo(int *align, int *min, int *max, int fd);
extern int airDioTest(int fd, const void *ptr, size_t size);
extern void *airDioMalloc(size_t size, int fd);
extern size_t airDioRead(int fd, void *ptr, size_t size);
extern size_t airDioWrite(int fd, const void *ptr, size_t size);
typedef void *(*airMopper)(void *);
typedef struct {
  void *ptr;     
  airMopper mop; 
  int when;      
} airMop;
extern airArray *airMopNew(void);
extern int airMopAdd(airArray *arr, void *ptr, airMopper mop, int when);
extern void airMopSub(airArray *arr, void *ptr, airMopper mop);
extern void airMopMem(airArray *arr, void *_ptrP, int when);
extern void airMopUnMem(airArray *arr, void *_ptrP);
extern void airMopPrint(airArray *arr, const void *_str, int when);
extern void airMopDone(airArray *arr, int error);
extern void airMopError(airArray *arr);
extern void airMopOkay(airArray *arr);
extern void airMopDebug(airArray *arr);